# MIA_1S2026_P1_202400388

./: .gitignore
backend/: CMakeLists.txt  Makefile  README.md  main.cpp
backend/Analyzer/: Analyzer.cpp  Analyzer.h
backend/DiskManagement/: DiskManagement.cpp  DiskManagement.h  DiskManagementImpl.h
backend/Server/: Server.cpp  Server.h
backend/Sessions/: SessionManager.cpp  SessionManager.h
backend/Structs/: Structs.cpp  Structs.h
backend/Utilities/: Utilities.cpp  Utilities.h
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
